# LitigationOS

./: .editorconfig  .gitattributes  .gitignore  .shellcheckrc  00_MASTER_ACTION_CHECKLIST.md  00_MASTER_BYPASS_STRATEGY.md  00_MASTER_DASHBOARD.md  00_MASTER_FILING_INDEX.md  00_MASTER_INDEX (2).md  00_MASTER_INDEX.md  01_CONVERGENCE_REPORT.md  01_EMERGENCY_TRO.md  02_SHADY_OAKS_COMPLAINT.md  03_DISQUALIFICATION_MCR2003.md  03_JTC__FORMAL_COMPLAINT_JUDGE_MCNEILL_001.md  04_FEDERAL_1983_COMPLAINT.md  04_FEDERAL_1983_COMPLAINT.pdf.lnk  05_MSC_ORIGINAL_ACTION.md  06_EFILING_GUIDE.md  06_JTC_COMPLAINT.md  07_CUSTODY_MODIFICATION.md  08_PPO_TERMINATION.md  09_COA_BRIEF_ON_APPEAL.md  10_COA_EMERGENCY_MOTION.md  AGENTS.md  ANDREW_MASTER_CHECKLIST.md  ARCHITECTURE.md  ARCHITECTURE_MAP.txt  CHANGELOG.md  CITATION_AUDIT_REPORT.md  CITATION_HARDENING_REPORT.md  COA_366810_QUICK_INDEX.md  CODE_OF_CONDUCT.md  CONSOLIDATED_FILING_SUMMARY_2026-02-22.txt  CONTRIBUTING.md  COPILOT_INSTRUCTIONS_ENHANCED.md  COPILOT_STARTUP_STATE.md  COURT_RULE_LINKS.txt  CROSS_FILING_CONSISTENCY_REPORT.md  CROSS_REFERENCE_LOG.json  (+179 more)
00_SYSTEM/engines/ocr_embed_v2/: .geminiignore  GEMINI.md  MANIFEST.pack.json  README.md  README.rtf  RUN.cmd  __init__.py  pyproject.toml  requirements.txt
00_SYSTEM/engines/ocr_embed_v2/.gemini/: settings.json
00_SYSTEM/engines/ocr_embed_v2/config/: harvest_config.json
00_SYSTEM/engines/ocr_embed_v2/docs/: UNIFIED_AutoHarvest_Runbook_v1.2.md
00_SYSTEM/engines/ocr_embed_v2/licenses/: THIRD_PARTY.md
00_SYSTEM/engines/ocr_embed_v2/prompts/: 00_BOOTSTRAP.md
00_SYSTEM/engines/ocr_embed_v2/scripts/: INSTALL_DEPS.ps1  INSTALL_TESSERACT.ps1  MAKE_MANIFEST.py  REPACK.cmd  REPACK.py  RUN.ps1  START_QDRANT.ps1  STOP_QDRANT.ps1
00_SYSTEM/engines/ocr_embed_v2/src/litos_harvest/: chunking.py  embeddings.py  main.py  query.py  run_ledger.py  scanner.py  utils.py
00_SYSTEM/mcp_server/: README.md  command_runner.py  pyproject.toml  run_command_runner.py  run_litigation_server.py  test-data.xml  tools_v3.py  tools_v3_manifest.json  tools_v4_bridge.py  tools_v4_manifest.json
00_SYSTEM/mcp_server/litigation_context_mcp/: __init__.py  db.py  db.py.bak  pdf_extractor.py  server.py  tools_v3_bridge.py  tools_v4.py  tools_v4_bridge.py
00_SYSTEM/mcp_server/tests/: test_mcp_basic.py  test_mcp_integration.py
11_CODE/litigationos/: .coverage  LICENSE  LitigationOS.spec  README.md  TEST01  build.bat  build.py  pyproject.toml  run_migration.py  test_output.txt
11_CODE/litigationos/.github/workflows/: build.yml
11_CODE/litigationos/assets/: README.md  icon.py
11_CODE/litigationos/docs/: DEVELOPER.md  LAUNCH_CHECKLIST.md  MICHIGAN.md  PROCESS_BLUEPRINT.md  PRODUCT_SPEC.md  QUICK_START.md  README.md  complaint_filing_guide.md
11_CODE/litigationos/installer/: build_installer.py  setup.iss
11_CODE/litigationos/src/litigationos/: __init__.py  __main__.py  app.py  branding.py  config.py  legal_notices.py
11_CODE/litigationos/src/litigationos/cli/: __init__.py  main.py
11_CODE/litigationos/src/litigationos/data/: __init__.py  foc_forms.py  (+14 more)
11_CODE/litigationos/tests/: __init__.py  conftest.py  test_agent_v3.py  test_authority_chain.py  test_authority_index.py  test_backup_engine.py  test_backup_version.py  test_brief_compliance.py  test_case_engine.py  test_coa_forms.py  test_complaint_stacks.py  test_court_calendar.py  test_court_form_filler.py  test_dashboard.py  test_db.py  test_discovery_generator.py  test_efiling_prep.py  test_evidence.py  test_evidence_chain.py  test_filing_factory.py  test_health_monitor.py  test_integration_pipeline.py  test_irac_engine.py  test_jtc_complaint.py  test_motion_forms.py  test_motion_templates.py  test_pdf_formatter.py  test_pdf_production.py  test_placeholder_resolver.py  test_prefiling_qa.py  test_section1983.py  test_service_generator.py  test_timeline_engine.py
(+11045 files in other folders)
