[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "litigationos"
version = "6.0.0"
description = "Autonomous litigation support system — SINGULARITY APEX"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12"
authors = [
    {name = "Andrew James Pigors"},
]

dependencies = [
    # Core (stdlib covers most needs — these are essential externals)
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]
graph = [
    "neo4j>=5.20.0",
]
ml = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.5.0",
]
all = [
    "litigationos[dev,graph,ml]",
]

[tool.pytest.ini_options]
testpaths = [
    "00_SYSTEM/shared/tests",
    "00_SYSTEM/engines/tests",
    "00_SYSTEM/brains/tests",
    "00_SYSTEM/tools/tests",
    ".github/extensions/tests",
    "scripts",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short --no-header"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["00_SYSTEM"]
include = ["shared*", "engines*", "brains*", "tools*"]
