[project]
name = "litigationos"
version = "1.0.0-beta.1"
description = "Pro se litigation management system — AI-powered, offline-first, court-ready"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Andrew James Pigors", email = "andrewjpigors@gmail.com"},
]
keywords = ["litigation", "legal", "pro-se", "court", "michigan", "case-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "customtkinter>=5.2.0",
    "python-docx>=1.0.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "tkcalendar>=1.6.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
litigationos = "litigationos.cli.main:app"

[project.gui-scripts]
litigationos-gui = "litigationos.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
