[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litos-harvest"
version = "2.0.0"
description = "Local-first harvesting + OCR + embedding index runner for LitigationOS corpora"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["litos_harvest*"]
